<resources>
    <string name="app_name">PraktikumAndroid</string>
    <string name="first_app">App Pertama</string>
    <string name="button_yang_panjang">Button Yang Panjang</string>
    <string name="SIMPAN" />
    <string name="BATAL" />
    <string name="nama">Nama</string>
    <string name="isi_nama_lengkap">Isi Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="no_telpon">No Telpon</string>
    <string name="isi_email_yang_valid">Isi Email Yang Valid</string>
    <string name="isi_no_telpon_yang_aktif">Isi No Telpon Yang Aktif</string>
    <string name="isi_tanggal_lahir">Isi Tanggal Lahir</string>
    <string name="sks">SKS</string>
    <string name="isi_sks_yang_sudah_di_tempuh">Isi Sks Yang Sudah Di Tempuh</string>
    <string name="Batal" />
    <string name="Simpan" />
    <string name="aplikasi_android_ku">aplikasi_android_ku</string>
</resources>